# django-heroku-static-file-example

./: .gitignore  LICENSE  Procfile  README.md  app.json  manage.py  pyproject.toml
example/apps/profiles/: admin.py  apps.py  models.py
example/apps/profiles/migrations/: 0001_initial.py
example/config/: asgi.py  gunicorn.py  settings.py  urls.py  wsgi.py
example/utils/: storage_backends.py
scripts/: release.sh
