[tool.poetry]
name = "django-heroku-static-file-example"
version = "1.0.0"
description = "example project of using Bucketeer to host media and static files on Heroku"
authors = ["Dan Starner <me@danstarner.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.8"
Django = "^4.0.1"
gunicorn = "^20.1.0"
Pillow = "^9.0.0"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
